[gd_scene load_steps=5 format=3 uid="uid://ctnj8i2npknx7"]

[ext_resource type="Script" path="res://power_up.gd" id="1_l80ro"]
[ext_resource type="PackedScene" uid="uid://dr8gan403ko07" path="res://assets/jewel.glb" id="2_tl3xy"]
[ext_resource type="AudioStream" uid="uid://cg75rmamh07q7" path="res://051_use_item_01.wav" id="3_x6je2"]

[sub_resource type="SphereShape3D" id="SphereShape3D_aiews"]
radius = 0.217313

[node name="power_up" type="Area3D"]
script = ExtResource("1_l80ro")

[node name="gem" parent="." instance=ExtResource("2_tl3xy")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0126427, 0.171239, -0.0239275)
shape = SubResource("SphereShape3D_aiews")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="power_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x6je2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
